[package]
name = "abd-distances"
version = "1.0.4"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "abd_distances"
crate-type = ["cdylib"]

[dependencies]
distances = { workspace = true }
ndarray = { workspace = true, features = ["rayon", "approx"] }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py313"] }
# pyo3-ffi = { workspace = true, features = ["extension-module", "abi3-py313"] }
