[package]
name = "clam-mbed"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
abd-clam = { workspace = true, features = ["all"] }
distances = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
ftlog = { workspace = true }
bench-utils = { path = "../../benches/utils" }
rayon = { workspace = true }
rand = { workspace = true }
hdf5 = { workspace = true }
